# learnai_20250406

./: README.md  main.py  pyproject.toml  save_images.py
examples/: save_clipboard_image.py  save_images_example.py  web_image_downloader.py
langgraph_0406/: basic.py  basic_tool.py  basic_tool_memory.py  basic_tool_memory_human.py
langgraph_example/: 001joke.py  001joke_with_image_save.py  basic.ipynb  basic_feedback.ipynb
langgraph_example/sciagent/: README.md  api.py  interactive_router.py  router.py  run_servers.py  serve_static.py  test_router.py
langgraph_example/sciagent/agents/: README.md  __init__.py  base_agent.py  bioinfo_interpret_agent.py  bioinformatics_agent.py  chat_agent.py  deep_research_agent.py  literature_agent.py  research_image_agent.py
langgraph_example/sciagent/static/: index.html
mcp_0408/mcp_client/: 01client.py  01client_llm.py  01client_llm_weather.py  02arxiv_client.py
mcp_0408/mcp_server/: 01weather_server.py  02arxiv_server.py
mcp_0408/tools_example/: arxiv_detail.py
utils/: README.md  image_saver.py
