[project]
name = "learnai-20250406"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.2.0",
    "dotenv>=0.9.9",
    "langchain-community>=0.3.21",
    "langchain-openai>=0.3.12",
    "langgraph>=0.3.25",
    "mcp>=1.6.0",
    "openai>=1.70.0",
    "ipython>=8.0.0",
    "ipykernel>=6.29.5",
]
